I fixed the spacing in the announcement box. the background of the buttons in the header. I fixed the buttons inside the cards using images inside buttons but also grid and flexbox for the positioning.

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,8 @@ body {
     background-color: #1992d4;
     color: white;
     font-weight: bold;
+    border-color: #1992d4;
+    border-style: solid;
 }
 
 /* main-content */
@@ -249,6 +251,19 @@ body {
 
 .card-content {
     grid-column: 2/3;
+    display: grid;
+    grid-template-rows: 20% 60% 20%;
+}
+
+.card-content .card-content-button {
+    align-self:center;
+    justify-self:end;
+    display: flex;
+    gap: 20px;
+}
+.card-content-button *{
+    background-color: white;
+    border: 0px;
 }
 
  .card-badge {
@@ -276,6 +291,18 @@ body {
     margin: 0;
 }
 
+.announcements-box div {
+    border-bottom: 1px solid lightgrey;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.announcements-box .announcement-three {
+    border-bottom: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
 /* right-lower-box */
 .right-lower-box > h3 {
     margin: 0;
@@ -284,7 +311,7 @@ body {
 .trending-box {
     margin: 0 20px;
     background-color: white;
-    padding: 10px;
+    padding: 20px 10px 10px 10px;
     padding-bottom: 0;
     display: grid;
     grid-template-rows: repeat(4, 20%);
